<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.eccentric_nz.tardisvortexmanipulator</groupId>
    <artifactId>TARDISVortexManipulator</artifactId>
    <version>1.7.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>TARDISVortexManipulator</name>
    <description>Cheap and nasty time travel. Very bad for you. I'm trying to give it up.</description>
    <url>https://github.com/eccentricdevotion/TARDISVortexManipulator</url>
    <inceptionYear>2014</inceptionYear>
    <licenses>
        <license>
            <name>GNU General Public License v3.0</name>
            <url>https://github.com/eccentricdevotion/TARDISVortexManipulator/blob/master/LICENSE.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:ssh://github.com/eccentricdevotion/TARDISVortexManipulator</connection>
        <developerConnection>scm:git:ssh://github.com/eccentricdevotion/TARDISVortexManipulator</developerConnection>
    </scm>
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/eccentricdevotion/TARDISVortexManipulator/issues</url>
    </issueManagement>
    <ciManagement>
        <system>Jenkins</system>
        <url>http://tardisjenkins.duckdns.org:8080</url>
    </ciManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <spigot.version>1.17.1</spigot.version>
    </properties>

    <dependencies>
        <!-- Hard dependencies -->
        <dependency>
            <!-- Spigot-API -->
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>${spigot.version}-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <!-- TARDIS -->
            <groupId>me.eccentric_nz.TARDIS</groupId>
            <artifactId>TARDIS</artifactId>
            <version>4.7.5-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- Development dependencies -->
        <dependency>
            <!-- JetBrains Java Annotations -->
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>21.0.1</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <!-- Spigot-API -->
            <name>SpigotMC</name>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <!-- TARDIS -->
            <name>TARDIS</name>
            <id>tardis-repo</id>
            <url>http://tardisjenkins.duckdns.org:8080/plugin/repository/everything/</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <!-- Apache Maven Javadoc Plugin -->
            <name>Apache Snapshots</name>
            <id>apache-snapshots</id>
            <url>https://repository.apache.org/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <finalName>${project.name}-${project.version}</finalName>
        <defaultGoal>clean package</defaultGoal>
        <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
        <resources>
            <resource>
                <!-- Use POM properties in plugin.yml -->
                <directory>${project.basedir}/src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>plugin.yml</include>
                </includes>
            </resource>
            <resource>
                <!-- Include all other resources -->
                <directory>${project.basedir}/src/main/resources</directory>
                <filtering>false</filtering>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <!-- Compile -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <!-- Attach sources -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <!-- Attach Javadocs -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.1-SNAPSHOT</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <links> <!-- References to external Javadocs -->
                        <!-- Spigot-API -->
                        <link>https://hub.spigotmc.org/javadocs/spigot/</link>
                        <!-- Jetbrains Java Annotations -->
                        <link>https://javadoc.io/doc/org.jetbrains/annotations/latest/</link>
                    </links>
                </configuration>
            </plugin>
            <plugin>
                <!-- Generate manifest for database conversion tool -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>me.eccentric_nz.tardisvortexmanipulator.database.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
